kubernetes-files/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: app
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
