kubernetes-files/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  type: NodePort
  selector:
    name: my-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30002
