kubernetes-files/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: app
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
